--- a/index.html
+++ b/index.html
@@ -12,12 +12,71 @@
       href="./images/favicon-32x32.png"
     />
 
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- LEAFLET -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+      integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+      crossorigin=""
+    />
+    <script
+      src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+      integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+      crossorigin=""
+    ></script>
+
+    <link rel="stylesheet" href="style.css" />
+    <script src="main.js" defer></script>
+
     <title>Frontend Mentor | IP Address Tracker</title>
   </head>
   <body>
-    IP Address Tracker Search for any IP address or domain IP Address Location
-    Timezone UTC
-    <!-- add offset value dynamically using the API -->
-    ISP
+    <header class="header">
+      <h1 class="primary-heading">IP Address Tracker</h1>
+      <form id="search-ip">
+        <input
+          class="search-input"
+          type="search"
+          id="ip-address"
+          placeholder="Search for any IP address or domain IP Address Location Timezone UTC"
+          required
+        />
+        <button class="search-btn">
+          <img src="images/icon-arrow.svg" alt="search" arial-label="search" />
+        </button>
+      </form>
+
+      <div class="info-container">
+        <div class="info-row">
+          <h2 class="info-subtitle">Ip Address</h2>
+          <p class="info-location">192.212.174.101</p>
+        </div>
+
+        <div class="info-row">
+          <h2 class="info-subtitle">Location</h2>
+          <p class="info-location">Brookly, NY 10001</p>
+        </div>
+
+        <div class="info-row">
+          <h2 class="info-subtitle">Timezone</h2>
+          <p class="info-location">UTC -05:00</p>
+        </div>
+
+        <div class="info-row">
+          <h2 class="info-subtitle">ISP</h2>
+          <p class="info-location">SpaceX Starlink</p>
+        </div>
+      </div>
+    </header>
+
+    <div id="map"></div>
   </body>
 </html>
