--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         />
         <p class="error-message">Invalid ip address or domain name</p>
         <button class="search-btn">
-          <img src="images/icon-arrow.svg" alt="search" arial-label="search" />
+          <img src="images/icon-arrow.svg" alt="search" />
         </button>
       </form>
 
@@ -83,6 +83,8 @@
       </div>
     </header>
 
-    <div id="map"></div>
+    <main>
+      <div id="map"></div>
+    </main>
   </body>
 </html>
