--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           class="search-input"
           type="search"
           id="ip-address"
-          placeholder="Search for any IP address or domain IP Address Location Timezone UTC"
+          placeholder="Search for any IP address or domain"
         />
         <p class="error-message">Invalid ip address or domain name</p>
         <button class="search-btn">
